# atomic_habits

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_related_habit.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_telegram_chat_id.py
